Fixed several instances of text overflow

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,6 +32,7 @@ $table-bg-accent: #E8E8E8;
 
 .alert {
   margin-bottom: 0px;
+  word-wrap: break-word;
 }
 
 .badges {
